fix: contrast in nav search when focussed

--- a/assets/scss/_external_link.scss
+++ b/assets/scss/_external_link.scss
@@ -33,6 +33,11 @@ a.external-link:after {
 }
 
 .td-search__input {
+  &:focus {
+    background-color: white;
+    color: $dark !important;
+  }
+
   &::placeholder {
     color: $dark !important;
   }
@@ -41,22 +46,6 @@ a.external-link:after {
 .td-search__icon {
   color: $dark !important;
 }
-
-.td-search {
-  background-color: white;
-  border-radius: .5rem;
-}
-
-.td-search__input {
-  &::placeholder {
-    color: #000;
-  }
-}
-
-.td-search__icon {
-  color: #000;
-}
-
 
 // Can't quite use this yet since (1) breadcrumbs currently use external links,
 // (2) we can't currently easily turn this off for footer icons.
